[gd_scene load_steps=14 format=3 uid="uid://cs0rndg84v7q0"]

[ext_resource type="Script" path="res://Scenes/mini_games/shredder/ShredderMiniGame.gd" id="1_51bei"]
[ext_resource type="Texture2D" uid="uid://wjox7l8cx5c4" path="res://Assets/Sprites/generic_items/genericItem_color_141.png" id="2_ptm7d"]
[ext_resource type="Script" path="res://Scenes/mini_games/shredder/Clip board.gd" id="3_rochj"]
[ext_resource type="Texture2D" uid="uid://ea3idyn2pse7" path="res://Assets/Sprites/room_1_custom_placeholders/PaperReg.png" id="4_6a764"]
[ext_resource type="Script" path="res://Scenes/mini_games/shredder/Shred.gd" id="4_e4n14"]
[ext_resource type="Texture2D" uid="uid://dcm6p18p7lslf" path="res://Assets/Sprites/generic_items/genericItem_color_160.png" id="4_smkob"]
[ext_resource type="Texture2D" uid="uid://bm178bucru5c3" path="res://Assets/Sprites/room_1_custom_placeholders/PaperIstra.png" id="6_squqo"]
[ext_resource type="Texture2D" uid="uid://cqnprxanaj8xk" path="res://Assets/Sprites/room_1_custom_placeholders/Papertion.png" id="7_6moph"]
[ext_resource type="Texture2D" uid="uid://cvfowmbihv100" path="res://Assets/Sprites/room_1_custom_placeholders/WrongPaper1.png" id="8_ck2q6"]
[ext_resource type="Texture2D" uid="uid://cr8f3w5tfwkru" path="res://Assets/Sprites/room_1_custom_placeholders/WrongPaper2.png" id="9_o3rdi"]
[ext_resource type="Texture2D" uid="uid://kddw2eyutlhd" path="res://Assets/Sprites/room_1_custom_placeholders/Wrongpaper3.png" id="10_th7a5"]
[ext_resource type="Texture2D" uid="uid://coqy5g3l5jkhq" path="res://Assets/Sprites/room_1_custom_placeholders/Wrongpaper5.png" id="11_rtk6o"]
[ext_resource type="Texture2D" uid="uid://c2eijailvc6fo" path="res://Assets/Sprites/room_1_custom_placeholders/Wrongpaper4.png" id="12_vf57k"]

[node name="ShredderMiniGame" type="Node2D"]
script = ExtResource("1_51bei")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.0784314, 0.709804, 0.192157, 1)

[node name="ClipBoard" type="Sprite2D" parent="." node_paths=PackedStringArray("winning_combo")]
position = Vector2(231, 403)
rotation = 0.242072
scale = Vector2(2.6129, 4.46109)
texture = ExtResource("2_ptm7d")
script = ExtResource("3_rochj")
winning_combo = [NodePath("../Shred 1"), NodePath("../Shred 2"), NodePath("../Shred 3")]

[node name="Check1" type="Marker2D" parent="ClipBoard"]
position = Vector2(-75.8809, -16.8568)
scale = Vector2(0.5, 0.5)

[node name="Check2" type="Marker2D" parent="ClipBoard"]
position = Vector2(-33.9834, -23.629)
scale = Vector2(0.5, 0.5)

[node name="Check3" type="Marker2D" parent="ClipBoard"]
position = Vector2(13.5045, -27.813)
scale = Vector2(0.5, 0.5)

[node name="Shred 1" type="TextureButton" parent="."]
offset_left = 1492.12
offset_top = 343.37
offset_right = 1679.12
offset_bottom = 1176.37
rotation = 0.866083
texture_normal = ExtResource("4_6a764")
script = ExtResource("4_e4n14")

[node name="Shred 2" type="TextureButton" parent="."]
offset_left = 1508.12
offset_top = 315.37
offset_right = 1695.12
offset_bottom = 1148.37
rotation = -0.320482
texture_normal = ExtResource("6_squqo")
script = ExtResource("4_e4n14")

[node name="Shred 3" type="TextureButton" parent="."]
offset_left = 1089.0
offset_top = 1045.0
offset_right = 1276.0
offset_bottom = 1878.0
rotation = -1.62383
texture_normal = ExtResource("7_6moph")
script = ExtResource("4_e4n14")

[node name="Shred 4" type="TextureButton" parent="."]
offset_left = 455.117
offset_top = 247.37
offset_right = 642.117
offset_bottom = 1080.37
rotation = -0.753436
texture_normal = ExtResource("8_ck2q6")
script = ExtResource("4_e4n14")

[node name="Shred 5" type="TextureButton" parent="."]
offset_left = 392.117
offset_top = 359.37
offset_right = 579.117
offset_bottom = 1192.37
rotation = -0.454467
texture_normal = ExtResource("9_o3rdi")
script = ExtResource("4_e4n14")

[node name="Shred 6" type="TextureButton" parent="."]
offset_left = 479.117
offset_top = 852.37
offset_right = 666.117
offset_bottom = 1685.37
rotation = 3.72453
texture_normal = ExtResource("10_th7a5")
script = ExtResource("4_e4n14")

[node name="Shred 7" type="TextureButton" parent="."]
offset_left = 962.12
offset_top = 211.37
offset_right = 1149.12
offset_bottom = 1044.37
rotation = 0.677643
texture_normal = ExtResource("12_vf57k")
script = ExtResource("4_e4n14")

[node name="Shred 8" type="TextureButton" parent="."]
offset_left = 1082.12
offset_top = 867.37
offset_right = 1269.12
offset_bottom = 1700.37
rotation = 2.30034
texture_normal = ExtResource("11_rtk6o")
script = ExtResource("4_e4n14")

[node name="CheckBttn" type="TextureButton" parent="."]
offset_left = 74.0
offset_top = 937.0
offset_right = 110.0
offset_bottom = 973.0
scale = Vector2(2.11111, 1.91667)
texture_normal = ExtResource("4_smkob")

[node name="Label" type="Label" parent="CheckBttn"]
layout_mode = 0
offset_left = -7.57895
offset_top = 38.0869
offset_right = 39.421
offset_bottom = 64.0869
text = "Check"
horizontal_alignment = 1

[connection signal="pressed" from="CheckBttn" to="." method="_on_check_bttn_pressed"]
